# etl_client

./: .gitignore  LICENSE  Makefile  README.md  setup.cfg
.github/workflows/: tests.yml
etl_client/: exceptions.py  manage.py  settings.py
etl_client/management/: __init__.py  base.py  manager.py  registry.py
etl_client/management/commands/: __init__.py  csv_consumer.py  json_consumer.py  run_all.py
etl_client/processing/: base.py  csv.py  json.py
etl_client/utils/: logging.py
tests/: conftest.py  test_commands.py  test_processors.py
