[metadata]
name = etl_client
version = 0.1.0
author = Andrey Kuchko
author_email = am.kuchko@gmail.com
description = ETL client for energy data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AndreyKuchko/etl_client
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.11
install_requires =
    aiohttp[speedups]==3.8.5
    pandas==2.1.0
    pydantic-settings==2.0.3
    aiofiles==23.2.1
    mypy==1.5.1

[options.extras_require]
testing =
    pytest==7.4.2
    pytest-asyncio==0.21.1
    black==23.9.1
    mypy==1.5.1
    types-aiofiles==23.2.0.0

[options.entry_points]
console_scripts =
    etl_client = etl_client.manage:entry_point

[mypy]
namespace_packages = true
ignore_missing_imports = true
exclude = build
